# asmctl

./: LICENSE  LICENSE.txt  Makefile  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  configure.in
devd/: asmctl.conf  asmctl.conf.s
src/: acpi_keyboard.c  acpi_video.c  asmctl.1  asmctl.c  asmctl.h  backlight.c
